--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
       <div class="container"></div>
     </main>
     <script src="js/app.js"></script>
+
+
     <h1>Open WebCam Using JavaScript</h1>
    <br/>
    <button id="startBtn" onclick="openCam()">Open Webcam</button>
@@ -64,5 +66,12 @@
          });
       }
    </script>
+
+
+<video autoplay style="height:180px; width: 240px;" poster="https://image.freepik.com/free-icon/video-camera-symbol_318-40225.png"></video>
+<p><button onclick="getStream()">Grab video & start recording</button></p>
+<p><button onclick="download()">Download!</button></p>
+  
+<p><small>Demo by <a href="http://www.mcasas.tk/" target="_blank" rel="noopener">Miguel Casas-Sanchez</a>.</small></p>
   </body>
 </html>
