--- a/index.html
+++ b/index.html
@@ -34,44 +34,45 @@
     <script src="js/app.js"></script>
 
 
-    <h1>Open WebCam Using JavaScript</h1>
-   <br/>
-   <button id="startBtn" onclick="openCam()">Open Webcam</button>
-   <br/><br/>
-   <video id="videoCam"></video>
-   <script>
-      function openCam(){
-         let All_mediaDevices=navigator.mediaDevices
-         if (!All_mediaDevices || !All_mediaDevices.getUserMedia) {
-            console.log("getUserMedia() not supported.");
-            return;
-         }
-         All_mediaDevices.getUserMedia({
-            audio: true,
-            video: true
-         })
-         .then(function(vidStream) {
-            var video = document.getElementById('videoCam');
-            if ("srcObject" in video) {
-               video.srcObject = vidStream;
-            } else {
-               video.src = window.URL.createObjectURL(vidStream);
-            }
-            video.onloadedmetadata = function(e) {
-               video.play();
-            };
-         })
-         .catch(function(e) {
-            console.log(e.name + ": " + e.message);
-         });
-      }
-   </script>
+    <div id="container">
 
-
-<video autoplay style="height:180px; width: 240px;" poster="https://image.freepik.com/free-icon/video-camera-symbol_318-40225.png"></video>
-<p><button onclick="getStream()">Grab video & start recording</button></p>
-<p><button onclick="download()">Download!</button></p>
+      <h1><a href="//webrtc.github.io/samples/" title="WebRTC samples homepage">WebRTC samples</a>
+          <span>MediaRecorder</span></h1>
   
-<p><small>Demo by <a href="http://www.mcasas.tk/" target="_blank" rel="noopener">Miguel Casas-Sanchez</a>.</small></p>
+      <p>For more information see the MediaStream Recording API <a
+              href="http://w3c.github.io/mediacapture-record/MediaRecorder.html"
+              title="W3C MediaStream Recording API Editor's Draft">Editor's&nbsp;Draft</a>.</p>
+  
+      <video id="gum" playsinline autoplay muted></video>
+      <video id="recorded" playsinline loop></video>
+  
+      <div>
+          <button id="start">Start camera</button>
+          <button id="record" disabled>Start Recording</button>
+          <button id="play" disabled>Play</button>
+          <button id="download" disabled>Download</button>
+      </div>
+  
+      <div>
+          Recording format: <select id="codecPreferences" disabled></select>
+      </div>
+      <div>
+          <h4>Media Stream Constraints options</h4>
+          <p>Echo cancellation: <input type="checkbox" id="echoCancellation"></p>
+      </div>
+  
+      <div>
+          <span id="errorMsg"></span>
+      </div>
+  
+      <a href="https://github.com/webrtc/samples/tree/gh-pages/src/content/getusermedia/record"
+         title="View source for this page on GitHub" id="viewSource">View source on GitHub</a>
+  
+  </div>
+  
+  <!-- include adapter for srcObject shim -->
+  <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+  <script src="js/main.js" async></script>
+  <script src="../../../js/lib/ga.js"></script>
   </body>
 </html>
