--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
           <button id="record" disabled>Start Recording</button>
           <button id="play" disabled>Play</button>
           <button id="download" disabled>Download</button>
+        <button id="loadFromCache">Load from Cache</button>
+
       </div>
 
       <div>
