--- a/index.html
+++ b/index.html
@@ -27,7 +27,26 @@
           <button id="askButton">Ask for location</button>
 
           <div id="target"></div>
+            <table>
+  <tr>
+    <td>Tilt Left/Right [gamma]</td>
+    <td id="doTiltLR"></td>
+  </tr>
+  <tr>
+    <td>Tilt Front/Back [beta]</td>
+    <td id="doTiltFB"></td>
+  </tr>
+  <tr>
+    <td>Direction [alpha]</td>
+    <td id="doDirection"></td>
+  </tr>
+</table>
 
+<div id="logoContainer">
+  <img src="https://www.w3.org/html/logo/downloads/HTML5_Badge_512.png" id="imgLogo">
+</div>
+
+<p><small>Demo from <a href="https://www.html5rocks.com/e
         </div>
     </main>
     <script src="js/app.js"></script>
