--- a/index.html
+++ b/index.html
@@ -27,28 +27,36 @@
           <button id="askButton">Ask for location</button>
 
           <div id="target"></div>
-            <table>
-  <tr>
-    <td>Tilt Left/Right [gamma]</td>
-    <td id="doTiltLR"></td>
-  </tr>
-  <tr>
-    <td>Tilt Front/Back [beta]</td>
-    <td id="doTiltFB"></td>
-  </tr>
-  <tr>
-    <td>Direction [alpha]</td>
-    <td id="doDirection"></td>
-  </tr>
-</table>
 
-<div id="logoContainer">
-  <img src="https://www.w3.org/html/logo/downloads/HTML5_Badge_512.png" id="imgLogo">
-</div>
-
-<p><small>Demo from <a href="https://www.html5rocks.com/e
+            
         </div>
     </main>
+        <table>
+      <tr>
+        <td>API used</td>
+        <td id="moApi"></td>
+      </tr>
+      <tr>
+        <td>linear acceleration (excl. gravity)</td>
+        <td id="moAccel"></td>
+      </tr>
+      <tr>
+        <td>acceleration incl. gravity</td>
+        <td id="moAccelGrav"></td>
+      </tr>
+      <tr>
+        <td>rotation rate</td>
+        <td id="moRotation"></td>
+      </tr>
+      <tr>
+        <td>interval (ms)</td>
+        <td id="moInterval"></td>
+      </tr>
+    </table>
+
+    <p><small>Demo based on <a href="https://www.html5rocks.com/en/tutorials/device/orientation/" target="_blank" rel="noopener">HTML5 Rocks</a> article.</small></p>
+
+
     <script src="js/app.js"></script>
 </body>
 
