--- a/index.html
+++ b/index.html
@@ -79,6 +79,13 @@
     <p><small>Demo based on <a href="https://www.html5rocks.com/en/tutorials/device/orientation/" target="_blank" rel="noopener">HTML5 Rocks</a> article.</small></p>
 
 
+    <p>
+  <button onclick="readContacts()">Read Contacts</button>
+</p>
+
+<pre id="log"></pre>
+
+
     <script src="js/app.js"></script>
 </body>
 
