--- a/index.html
+++ b/index.html
@@ -2,49 +2,47 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="manifest" href="manifest.json" />
-    <!-- ios support -->
-    <link rel="apple-touch-icon" href="images/icons/icon-72x72.png" />
-    <link rel="apple-touch-icon" href="images/icons/icon-96x96.png" />
-    <link rel="apple-touch-icon" href="images/icons/icon-128x128.png" />
-    <link rel="apple-touch-icon" href="images/icons/icon-144x144.png" />
-    <link rel="apple-touch-icon" href="images/icons/icon-152x152.png" />
-    <link rel="apple-touch-icon" href="images/icons/icon-192x192.png" />
-    <link rel="apple-touch-icon" href="images/icons/icon-384x384.png" />
-    <link rel="apple-touch-icon" href="images/icons/icon-512x512.png" />
-    <meta name="apple-mobile-web-app-status-bar" content="#db4938" />
-    <meta name="theme-color" content="#db4938" />
-    <link rel="stylesheet" href="css/style.css" />
-    <title>Dev'Coffee PWA</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="manifest" href="manifest.json" />
+  <!-- ios support -->
+  <link rel="apple-touch-icon" href="images/icons/icon-72x72.png" />
+  <link rel="apple-touch-icon" href="images/icons/icon-96x96.png" />
+  <link rel="apple-touch-icon" href="images/icons/icon-128x128.png" />
+  <link rel="apple-touch-icon" href="images/icons/icon-144x144.png" />
+  <link rel="apple-touch-icon" href="images/icons/icon-152x152.png" />
+  <link rel="apple-touch-icon" href="images/icons/icon-192x192.png" />
+  <link rel="apple-touch-icon" href="images/icons/icon-384x384.png" />
+  <link rel="apple-touch-icon" href="images/icons/icon-512x512.png" />
+  <meta name="apple-mobile-web-app-status-bar" content="#db4938" />
+  <meta name="theme-color" content="#db4938" />
+  <link rel="stylesheet" href="css/style.css" />
+  <title>Dev'Coffee PWA</title>
 </head>
 
 <body>
-    <div id="mySidenav" class="sidenav">
-  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="#">About</a>
-  <a href="#">Services</a>
-  <a href="#">Clients</a>
-  <a href="#">Contact</a>
-</div>
+  <div id="mySidenav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="index.html">Home</a>
+    <a href="Battery.html">Battery</a>
+  </div>
 
-<!-- Use any element to open the sidenav -->
-<span onclick="openNav()">open</span>
+  <!-- Use any element to open the sidenav -->
+  <span onclick="openNav()">open</span>
 
-<!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
-<div id="main">
-  <main>
-        <div class="container">
-          <button id="askButton">Ask for location</button>
+  <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
+  <div id="main">
+    <main>
+      <div class="container">
+        <button id="askButton">Ask for location</button>
 
-          <div id="target"></div>
+        <div id="target"></div>
 
-            
-        </div>
+
+      </div>
     </main>
-        <table>
+    <table>
       <tr>
         <td>API used</td>
         <td id="moApi"></td>
@@ -68,57 +66,59 @@
     </table>
 
     <div class="columns">
-  <div class="column">
-    <button class="btn-file">
-      Choose some files to read<br>(File API) <input type="file" onchange="readFiles(this.files)" multiple>
-    </button>
-    
-    <p>Number of selected files: <b id="count">N/A</b></p>
-  </div>
-  <div class="column">
-    <button class="btn-file" onclick="writeFile()">
-      Choose file to create or overwrite<br>(Native File System API)
-    </button>
-  </div>
-</div>
+      <div class="column">
+        <button class="btn-file">
+          Choose some files to read<br>(File API) <input type="file" onchange="readFiles(this.files)" multiple>
+        </button>
 
-<ul id="target"></ul>
+        <p>Number of selected files: <b id="count">N/A</b></p>
+      </div>
+      <div class="column">
+        <button class="btn-file" onclick="writeFile()">
+          Choose file to create or overwrite<br>(Native File System API)
+        </button>
+      </div>
+    </div>
+
+    <ul id="target"></ul>
 
     <p>Estimated storage usage is <b id="usage">unknown</b> bytes.</p>
-<p>Estimated storage quota is <b id="quota">unknown</b> bytes.</p>
-<p>Estimated usage is <b id="percent">unknown</b>%.</p>
-<p>Persistent storage status is <b id="persisted">unknown</b>.</p>
-<p><button onclick="requestPersistence()">Request persistent storage</button></p>
-    <p><small>Demo based on <a href="https://www.html5rocks.com/en/tutorials/device/orientation/" target="_blank" rel="noopener">HTML5 Rocks</a> article.</small></p>
+    <p>Estimated storage quota is <b id="quota">unknown</b> bytes.</p>
+    <p>Estimated usage is <b id="percent">unknown</b>%.</p>
+    <p>Persistent storage status is <b id="persisted">unknown</b>.</p>
+    <p><button onclick="requestPersistence()">Request persistent storage</button></p>
+    <p><small>Demo based on <a href="https://www.html5rocks.com/en/tutorials/device/orientation/" target="_blank"
+          rel="noopener">HTML5 Rocks</a> article.</small></p>
 
 
     <p>
-  <button onclick="readContacts()">Read Contacts</button>
-</p>
+      <button onclick="readContacts()">Read Contacts</button>
+    </p>
 
-<pre id="log"></pre>
+    <pre id="log"></pre>
 
 
     <p>
-  <label>Engine</label>
-</p>
-<div role="group" id="selectEngine">
-  <input type="radio" name="engine" value="localStorage" checked/> Persistent Storage
-  <input type="radio" name="engine" value="sessionStorage"/> Per-Session Storage
-</div>
+      <label>Engine</label>
+    </p>
+    <div role="group" id="selectEngine">
+      <input type="radio" name="engine" value="localStorage" checked /> Persistent Storage
+      <input type="radio" name="engine" value="sessionStorage" /> Per-Session Storage
+    </div>
 
-<p>
-  <label for="value">Value for <code>myKey</code></label>
-  <input type="text" id="value">
-</p>
+    <p>
+      <label for="value">Value for <code>myKey</code></label>
+      <input type="text" id="value">
+    </p>
 
-<p>Open the example in another tab and change the value there to see the synchronization via <code>storage</code> event.</p>
-<div id="target"></div>
+    <p>Open the example in another tab and change the value there to see the synchronization via <code>storage</code>
+      event.</p>
+    <div id="target"></div>
 
 
     <script src="js/app.js"></script>
-</div> 
-  
+  </div>
+
 </body>
 
 </html>
