--- a/Battery.html
+++ b/Battery.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
+
 <body>
-    <div id="mySidenav" class="sidenav">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-      <a href="#">About</a>
-      <a href="#">Services</a>
-      <a href="#">Clients</a>
-      <a href="#">Contact</a>
-    </div>
-  
-    <!-- Use any element to open the sidenav -->
-    <span onclick="openNav()">open</span>
-  
-    <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
-    <div id="main">
-      <main>
-       
-  
-  
+  <div id="mySidenav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Clients</a>
+    <a href="#">Contact</a>
+  </div>
+
+  <!-- Use any element to open the sidenav -->
+  <span onclick="openNav()">open</span>
+
+  <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
+  <div id="main">
+    <main>
+      <p>Initial battery status was <b id="charging">unknown</b>, charging time <b id="chargingTime">unknown</b>,
+        discharging time <b id="dischargingTime">unknown</b>, level <b id="level">unknown</b>.</p>
+
+      <div id="target"></div>
+
+
       <script src="js/app.js"></script>
-    </div>
-  
-  </body>
-  
-  </html>
+  </div>
+
+</body>
+
+</html>
