--- a/Battery.html
+++ b/Battery.html
@@ -23,10 +23,8 @@
 <body>
   <div id="mySidenav" class="sidenav">
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-    <a href="#">About</a>
-    <a href="#">Services</a>
-    <a href="#">Clients</a>
-    <a href="#">Contact</a>
+    <a href="index.html">Home</a>
+    <a href="Battery.html">Battery</a>
   </div>
 
   <!-- Use any element to open the sidenav -->
