--- a/index.html
+++ b/index.html
@@ -33,34 +33,36 @@
 
   <!-- Add all page content inside this div if you want the side nav to push page content to the right (not used if you only want the sidenav to sit on top of the page -->
   <div id="main">
-    <main>
-      
-      <table>
-        <tr>
-          <td>API used</td>
-          <td id="moApi"></td>
-        </tr>
-        <tr>
-          <td>linear acceleration (excl. gravity)</td>
-          <td id="moAccel"></td>
-        </tr>
-        <tr>
-          <td>acceleration incl. gravity</td>
-          <td id="moAccelGrav"></td>
-        </tr>
-        <tr>
-          <td>rotation rate</td>
-          <td id="moRotation"></td>
-        </tr>
-        <tr>
-          <td>interval (ms)</td>
-          <td id="moInterval"></td>
-        </tr>
-      </table>
-
-
-      <script src="js/app.js"></script>
+   
   </div>
+  <main>
+      
+    <table>
+      <tr>
+        <td>API used</td>
+        <td id="moApi"></td>
+      </tr>
+      <tr>
+        <td>linear acceleration (excl. gravity)</td>
+        <td id="moAccel"></td>
+      </tr>
+      <tr>
+        <td>acceleration incl. gravity</td>
+        <td id="moAccelGrav"></td>
+      </tr>
+      <tr>
+        <td>rotation rate</td>
+        <td id="moRotation"></td>
+      </tr>
+      <tr>
+        <td>interval (ms)</td>
+        <td id="moInterval"></td>
+      </tr>
+    </table>
+
+
+    <script src="js/app.js"></script>
+    </main>
 
 </body>
 
