--- a/Battery.html
+++ b/Battery.html
@@ -35,12 +35,12 @@
 
   </div>
 
-
+<main>
   <p>Initial battery status was <b id="charging">unknown</b>, charging time <b id="chargingTime">unknown</b>,
     discharging time <b id="dischargingTime">unknown</b>, level <b id="level">unknown</b>.</p>
 
   <div id="target"></div>
-
+</main>
 
   <script src="js/app.js"></script>
 
