--- a/Battery.html
+++ b/Battery.html
@@ -32,6 +32,8 @@
     discharging time <b id="dischargingTime">unknown</b>, level <b id="level">unknown</b>.</p>
 
   <div id="target"></div>
+
+  <script src="js/app.js"></script>
 </main>
 
 </body>
