--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h2>Current Balance: <span id="currentBalance">0</span></h2>
     </div>
   </div>
+<script src="app.js" defer></script>
 
-  <script src="app.js"></script>
 </body>
 </html>
