--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
       <input type="text" id="transaction" placeholder="e.g., Grocery">
       <label for="amount">Amount:</label>
       <input type="number" id="amount" placeholder="e.g., 50">
-      <button onclick="addTransaction()">Add Transaction</button>
+      <button onclick="window.addTransaction()">Add Transaction</button>
+
     </div>
     <div>
       <h2>Current Balance: <span id="currentBalance">0</span></h2>
