--- a/index.html
+++ b/index.html
@@ -12,35 +12,38 @@
   <link rel="stylesheet" href="css/style.css" />
   <title>Dev'Coffee PWA</title>
 </head>
-
 <body>
-  <div id="app">
-    <h1>Balance Tracker</h1>
-    <table>
-      <thead>
-        <tr>
-          <th>Date</th>
-          <th>Transaction</th>
-          <th>Amount</th>
-        </tr>
-      </thead>
-      <tbody id="transactionTableBody">
-        <!-- Transaction rows will be inserted here dynamically -->
-      </tbody>
-    </table>
-    <div>
-      <label for="transaction">Transaction:</label>
-      <input type="text" id="transaction" placeholder="e.g., Grocery">
-      <label for="amount">Amount:</label>
-      <input type="number" id="amount" placeholder="e.g., 50">
-      <button onclick="window.addTransaction()">Add Transaction</button>
-
+    <div id="app">
+        <h1>Expense Tracker</h1>
+        <div id="balance">Balance: $0.00</div>
+        <div id="table-container">
+            <table id="expense-table">
+                <!-- Table header -->
+                <thead>
+                    <tr>
+                        <th>Date</th>
+                        <th>Type</th>
+                        <th>Amount</th>
+                    </tr>
+                </thead>
+                <!-- Table body will be populated dynamically with JavaScript -->
+                <tbody></tbody>
+            </table>
+        </div>
+        <div id="form-container">
+            <label for="date">Date:</label>
+            <input type="date" id="date" required>
+            <label for="type">Type:</label>
+            <select id="type" required>
+                <option value="income">Income</option>
+                <option value="expense">Expense</option>
+            </select>
+            <label for="amount">Amount:</label>
+            <input type="number" id="amount" step="0.01" required>
+            <button onclick="addTransaction()">Add</button>
+        </div>
     </div>
-    <div>
-      <h2>Current Balance: <span id="currentBalance">0</span></h2>
-    </div>
-  </div>
-<script src="app.js" defer></script>
 
+    <script src="app.js"></script>
 </body>
 </html>
