--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </select>
             <label for="amount">Amount:</label>
             <input type="number" id="amount" step="0.01" required>
-            <button onclick="addTransaction()">Add</button>
+            <button type="button" onclick="addTransaction()">Add Transaction</button>
         </div>
     </div>
 
