--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <div class="test-element">Drag me too</div>
 
     <p><small>Based on demo from <a href="https://www.quirksmode.org/m/tests/drag2.html">QuirksMode.org</a>.</small></p>
+
+    <script src="app.js"></script>
     
 </body>
 
