had the section for the board

--- a/index.html
+++ b/index.html
@@ -20,7 +20,20 @@
     <div class="test-element">Drag me with another finger</div>
     <div class="test-element">Drag me too</div>
 
-    <p><small>Based on demo from <a href="https://www.quirksmode.org/m/tests/drag2.html">QuirksMode.org</a>.</small></p>
+    <div class="section">
+        <h2>Section 1</h2>
+        <p>This is the content of Section 1.</p>
+    </div>
+
+    <div class="section">
+        <h2>Section 2</h2>
+        <p>This is the content of Section 2.</p>
+    </div>
+
+    <div class="section">
+        <h2>Section 3</h2>
+        <p>This is the content of Section 3.</p>
+    </div>
 
     <script>
 
