--- a/index.html
+++ b/index.html
@@ -20,19 +20,18 @@
     <div class="test-element">Drag me with another finger</div>
     <div class="test-element">Drag me too</div>
 
-    <div class="section">
-        <h2>Section 1</h2>
-        <p>This is the content of Section 1.</p>
-    </div>
+    <div class="d-flex">
+        <div class="section">
+            <h2>Aufgabe</h2>
+        </div>
 
-    <div class="section">
-        <h2>Section 2</h2>
-        <p>This is the content of Section 2.</p>
-    </div>
+        <div class="section">
+            <h2>Bearbeitung</h2>
+        </div>
 
-    <div class="section">
-        <h2>Section 3</h2>
-        <p>This is the content of Section 3.</p>
+        <div class="section">
+            <h2>Erledigt</h2>
+        </div>
     </div>
 
     <script>
