--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
 </head>
 
 <body>
-    <!-- Praktikum 5 -->
-    <p><b>Praktikum 5</b></p>
-    <div class="test-element">Drag me with one finger</div>
-    <div class="test-element">Drag me with another finger</div>
-    <div class="test-element">Drag me too</div>
+    <!-- Title -->
+    <p><b>Praktikumsaufgabe Kanban</b></p>
 
+    <!-- Create the different post-its that can be moved-->
+    <div class="test-element">Kanban ausprobieren</div>
+    <div class="test-element">Bunte Post-its kaufen</div>
+    <div class="test-element">Mehr über Kanban lernen</div>
+    <div class="test-element">Kanban-Tafel einweihen</div>
+
+    <!-- Create 3 section of the Kanban board-->
     <div class="d-flex">
         <div class="section">
             <h2>Aufgabe</h2>
@@ -34,6 +38,7 @@
         </div>
     </div>
 
+    <!-- Javascript from whatwebcando.today -->
     <script>
 
         function startDrag(e) {
