--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 
     <!-- Javascript from whatwebcando.today -->
-    <script src="js/app.js></script>
+    <script src="js/app.js"></script>
 
 </body>
 
